// Code generated by oracle. DO NOT EDIT.

syntax = "proto3";

package arc.types.pb;

import "google/protobuf/struct.proto";

option go_package = "github.com/synnaxlabs/arc/types/pb";

enum Kind {
  KIND_INVALID = 0;
  KIND_U_8 = 1;
  KIND_U_16 = 2;
  KIND_U_32 = 3;
  KIND_U_64 = 4;
  KIND_I_8 = 5;
  KIND_I_16 = 6;
  KIND_I_32 = 7;
  KIND_I_64 = 8;
  KIND_F_32 = 9;
  KIND_F_64 = 10;
  KIND_STRING = 11;
  KIND_CHAN = 14;
  KIND_SERIES = 15;
  KIND_VARIABLE = 16;
  KIND_NUMERIC_CONSTANT = 17;
  KIND_INTEGER_CONSTANT = 18;
  KIND_FLOAT_CONSTANT = 19;
  KIND_FUNCTION = 20;
  KIND_SEQUENCE = 21;
  KIND_STAGE = 22;
}

message FunctionProperties {
  repeated Param inputs = 1;
  repeated Param outputs = 2;
  repeated Param config = 3;
}

message Type {
  repeated Param inputs = 1;
  repeated Param outputs = 2;
  repeated Param config = 3;
  Kind kind = 4;
  string name = 5;
  optional Type elem = 6;
  optional Unit unit = 7;
  optional Type constraint = 8;
}

message Param {
  string name = 1;
  Type type = 2;
  google.protobuf.Value value = 3;
}

message Channels {
  map<uint32, string> read = 1;
  map<uint32, string> write = 2;
}

message Dimensions {
  int32 length = 1;
  int32 mass = 2;
  int32 time = 3;
  int32 current = 4;
  int32 temperature = 5;
  int32 angle = 6;
  int32 count = 7;
  int32 data = 8;
}

message Unit {
  Dimensions dimensions = 1;
  double scale = 2;
  string name = 3;
}
